--- a/index.html
+++ b/index.html
@@ -1,38 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/scripts.js"></script>
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/zuc7qoh.css">
     <title>Your Own Virtual Pet!</title>
     <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.webmanifest"> -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
+    <script src="./js/scripts.js" defer></script>
+        <!-- <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+            <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+            <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+            <link rel="manifest" href="/manifest.webmanifest"> -->
 </head>
+
 <body>
-    <!-- <h1>testing link</h1> -->
-    <div class="flex-container">
-        <div><h1>Hatch a Virtual Pet</h1></div>
-        <div><h2>and keep it alive!</h2></div>
-        <div id="statsHeaders" class="flex-container">
-            <div><h3>NAME</h3></div>
-            <div><h3>AGE</h3></div>
-            <div><h3>HEALTH</h3></div>
-            <div><h3>HUNGER</h3></div>
+    <!-- <h1>testing link</h1>
+            <div class="flex-container">
+                <div><h1>Hatch a Virtual Pet</h1></div>
+                <div><h2>and keep it alive!</h2></div>
+                <div id="statsHeaders" class="flex-container">
+                    <div><h3>NAME</h3></div>
+                    <div><h3>AGE</h3></div>
+                    <div><h3>HEALTH</h3></div>
+                    <div><h3>HUNGER</h3></div>
             <div><h3>FATIGUE</h3></div>
             <div><h3>BOREDOM</h3></div>
-            </div>
-            <!-- <h3>NAME</h3>
+        </div>
+        <h3>NAME</h3>
+        <h3>AGE</h3>
+        <h3>HEALTH</h3>
+        <h3>HUNGER</h3>
+        <h3>FATIGUE</h3>
+        <h3>BOREDOM</h3>
+        </div>
+        </div>-->
+    <h1>Hatch a Virtual Pet</h1>
+    <h2>and keep it alive!</h2>
+    <h3 id="petName">NAME</h3>
+
+    <ul class="statsList">
+        <li>AGE</li>
+        <li>HEALTH</li>
+        <li>HUNGER</li>
+        <li>FATIGUE</li>
+        <li>BOREDOM</li>
+    </ul>
+    <!-- <h3>NAME</h3>
+    <h3>AGE</h3>
+    <h3>HEALTH</h3>
+    <h3>HUNGER</h3>
+    <h3>FATIGUE</h3>
+    <h3>BOREDOM</h3> -->
+    <!-- <h3>NAME</h3>
             <h3>AGE</h3>
             <h3>HEALTH</h3>
             <h3>HUNGER</h3>
             <h3>FATIGUE</h3>
             <h3>BOREDOM</h3> -->
-        </div>
-    </div>
+    
 </body>
+
 </html>
