issues with getting to GitHub

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/zuc7qoh.css">
     <title>Your Own Virtual Pet!</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous" defer></script>
-    <script src="./js/scripts.js" defer></script>
+    <script src="scripts.js" defer></script>
 
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
             <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
@@ -88,8 +88,8 @@
     <div>
         <button class="actions" onclick="feed()">Feed</button>
         <button class="actions" onclick="play()">Play</button>
-        <img class="actions" onclick="sleep()" id="lightSwitch" src="img/on.png"></button>
-        <img id="character" src="img/betterTamagotchi_egg.png">
+        <img class="actions" onclick="sleep()" id="lightSwitch" src="on.png"></button>
+        <img id="character" src="betterTamagotchi_egg.png">
     </div>
 
     <!-- <div class="grid-container">
